# vexa

./: .cleanignore  .gitguardian.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
deploy/: README.md  env-example
docs/: Makefile  README-TEMPLATES.md  README.md  architecture-proposed.md  architecture-refactoring-plan.md  architecture.excalidraw  authentication.mdx  bot-overview.mdx  changelog.mdx  chatgpt-transcript-share-links.mdx  concepts.mdx  dependency-audit.md  deployment.mdx  docs.json  errors-and-retries.mdx  external-connections.mmd  (+33 more)
services/agent-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/agent-api/agent_api/: __init__.py  auth.py  chat.py  config.py  container_manager.py  main.py  stream_parser.py  workspace.py
services/agent-api/tests/: test_auth.py  test_chat.py  test_container_manager.py  test_endpoints.py  test_g5_gate.py  test_stream_parser.py  test_workspace.py
services/meeting-api/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/meeting-api/config/: profiles.yaml
services/meeting-api/meeting_api/: __init__.py  auth.py  callbacks.py  config.py  database.py  main.py  meetings.py  models.py  post_meeting.py  recordings.py  retry.py  schemas.py  security_headers.py  storage.py  voice_agent.py  webhook_delivery.py  webhook_retry_worker.py  webhook_url.py  webhooks.py
services/meeting-api/meeting_api/collector/: __init__.py  auth.py  config.py  consumer.py  db_writer.py  endpoints.py  filter_config.py  filters.py  processors.py  speaker_mapper.py
services/meeting-api/tests/: conftest.py  test_auth.py  test_callbacks.py  test_gate_g3.py  test_integration.py  test_integration_live.py  test_meetings.py  test_recordings.py  test_voice_agent.py  test_webhook_url_ssrf.py  test_webhooks.py
services/meeting-api/tests/collector/: conftest.py  test_config.py  test_db_writer.py  test_filters.py  test_processors.py
services/runtime-api/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  profiles.example.yaml  profiles.yaml  pyproject.toml
services/runtime-api/.github/: PULL_REQUEST_TEMPLATE.md
services/runtime-api/.github/workflows/: ci.yml  close-pull-request.yml
services/runtime-api/runtime_api/: __init__.py  api.py  config.py  lifecycle.py  main.py  profiles.py  scheduler.py  scheduler_api.py  state.py  utils.py
services/runtime-api/runtime_api/backends/: __init__.py  docker.py  kubernetes.py  process.py
services/runtime-api/tests/: test_api.py  test_backends.py  test_gate_g5.py  test_integration.py  test_integration_process.py  test_lifecycle.py  test_profiles.py  test_scheduler.py  test_scheduler_api.py  test_state.py
(+490 files in other folders)
