[project]
name = "agent-api"
version = "0.1.0"
requires-python = ">=3.11"
description = "AI agent API — chat streaming, workspace sync, scheduling"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "redis>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
cron = ["croniter>=2.0"]
all = ["boto3>=1.34", "croniter>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
