[project]
name = "runtime-api"
version = "0.1.0"
description = "Container lifecycle API — generic container orchestration with pluggable backends"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vexa AI", email = "hello@vexa.ai" }]
keywords = ["containers", "orchestration", "docker", "kubernetes", "lifecycle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "redis[hiredis]>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "requests-unixsocket>=0.3",
    "requests>=2.31",
]

[project.optional-dependencies]
kubernetes = ["kubernetes>=28.0"]
cron = ["croniter>=2.0"]
all = ["runtime-api[kubernetes,cron]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "fakeredis[lua]>=2.0",
    "croniter>=2.0",
    "freezegun>=1.0",
]

[project.urls]
Homepage = "https://github.com/vexa-ai/vexa-runtime"
Repository = "https://github.com/vexa-ai/vexa-runtime"
Issues = "https://github.com/vexa-ai/vexa-runtime/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runtime_api"]

[tool.ruff]
target-version = "py311"
line-length = 100
